--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 12:09:00 PM</p>
+    <p class="lastupdate">09/18/2020 12:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,8 +84,8 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">80.5<br/>
-            <span class="timestamp">11:59:43 AM</span><br/>
+          <td class="data new_row">81.1<br/>
+            <span class="timestamp">12:13:45 PM</span><br/>
             63.6<br/>
             <span class="timestamp">06:50:10 AM</span>
           </td>
@@ -113,8 +113,8 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">80.5<br/>
-            <span class="timestamp">11:59:43 AM</span>
+          <td class="data new_row">81.1<br/>
+            <span class="timestamp">12:13:45 PM</span>
           </td>
           <td class="data new_row">96.4<br/>
             <span class="timestamp">02:42:47 PM (Wednesday)</span>
@@ -182,8 +182,8 @@
           <td class="units">%</td>
           <td class="data new_row">74<br/>
             <span class="timestamp">06:56:07 AM</span><br/>
-            42<br/>
-            <span class="timestamp">11:59:21 AM</span>
+            41<br/>
+            <span class="timestamp">12:13:51 PM</span>
           </td>
           <td class="data new_row">95<br/>
             <span class="timestamp">07:40:53 AM (Monday)</span><br/>
@@ -361,8 +361,8 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            77.3<br/>
-            <span class="timestamp">12:00:01 PM</span><br/>
+            77.4<br/>
+            <span class="timestamp">12:12:01 PM</span><br/>
             73.8<br/>
             <span class="timestamp">04:25:00 AM</span>
           </td>
