--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 01:14:00 PM</p>
+    <p class="lastupdate">09/18/2020 01:19:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">85.5&#176;F</td>
+        <td class="data">86.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">85.5&#176;F</td>
+        <td class="data">86.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">85.5&#176;F</td>
+        <td class="data">86.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">56.2&#176;F</td>
+        <td class="data">56.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">37%</td>
+        <td class="data">36%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.896 inHg (-0.065)</td>
+        <td class="data">29.890 inHg (-0.070)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph N (0&#176;)</td>
+        <td class="data">1 mph ESE (112&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:13:53 PM">
-            85.5</span><br/>
+          <span title="01:18:39 PM">
+            86.3</span><br/>
           <span title="06:50:10 AM">
             63.6</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="01:13:53 PM" class="hival">
-            85.5</span>
+          <span title="01:18:39 PM" class="hival">
+            86.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:56:07 AM">
             74</span><br/>
-          <span title="12:59:09 PM">
-            37</span>
+          <span title="01:15:21 PM">
+            36</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:31:01 AM">
             29.968</span><br/>
-          <span title="01:09:01 PM">
-            29.896</span>
+          <span title="01:18:01 PM">
+            29.890</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 22 hours, 27 minutes</td>
+      <td class="data">16 days, 22 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 22 hours, 27 minutes</td>
+      <td class="data">16 days, 22 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
